[package]
name = "hc_multitool"
version = "0.3.0"
edition = "2021"
authors = ["NekoiNemo <nekoinemo@gmail.com>"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
tap = "1"
clap = { version = "4", features = ["derive", "cargo", "color"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
log = "0.4"
env_logger = "0.11"
eyre = "0.6"
color-eyre = { version = "0.6", default-features = false } # Not using Tracing
dirs = "5"
